Fix #21967 - [Feature] Added organic place of farming country field

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model.properties
@@ -30,6 +30,7 @@ gs1_gs1Model.association.gs1_dutyFeeTaxCountry.title                            
 gs1_gs1Model.association.gs1_dutyFeeTaxRef.title                                          = Taxe
 gs1_gs1Model.association.gs1_dutyFeeTaxes.description                                     = Details on a duty, fee or tax which may be applicable to a trade item including applicability, rate and amount.
 gs1_gs1Model.association.gs1_dutyFeeTaxes.title                                           = Taxes
+gs1_gs1Model.association.gs1_organicProductPlaceOfFarmingCountry.title                    = Origin country of the ingredients
 gs1_gs1Model.association.gs1_promotionalArticleRef.title                                  = Standard referring article
 gs1_gs1Model.association.gs1_targetMarketCountries.description                            = List of countries representing the target market
 gs1_gs1Model.association.gs1_targetMarketCountries.title                                  = Countries
