--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms.properties
@@ -255,6 +255,7 @@ becpg.forms.unit.pp                                            = \u2030
 becpg.forms.unit.ppm                                           = ppm
 becpg.forms.unit.u00B5                                         = \u00B5
 becpg.forms.unit.u00B5g                                        = \u00B5g
+becpg.forms.unit.u00B5m                                        = \u00B5m
 becpg.forms.unit.y                                             = Y
 becpg.forms.variant                                            = Variant
 becpg.wizard.supplier.allergenList.label                       = Allergens
