Fix #27393 - [Standard feature] Add µm and µg in number-unit.ftl

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms.properties
@@ -242,6 +242,8 @@ becpg.forms.unit.mL                                            = mL
 becpg.forms.unit.mega                                          = 10e6
 becpg.forms.unit.mg                                            = mg
 becpg.forms.unit.micro                                         = 10e-6
+becpg.forms.unit.micro_g                                       = \u00B5g
+becpg.forms.unit.micro_m                                       = \u00B5m
 becpg.forms.unit.mil                                           = mil
 becpg.forms.unit.milli                                         = 10e-3
 becpg.forms.unit.mm                                            = mm
@@ -433,7 +435,7 @@ form.control.spel-editor.item.regulatoryCountries         = Regulatory countries
 form.control.spel-editor.item.regulatoryFormulatedDate    = Regulatory formulated date
 form.control.spel-editor.item.regulatoryMode              = Regulatory mode
 form.control.spel-editor.item.regulatoryRecipeId          = Regulatory recipe ID
-form.control.spel-editor.item.regulatoryUsageRef          = Regulatory usages
+form.control.spel-editor.item.regulatoryUsageRef          = Regulatory usage
 form.control.spel-editor.item.reportLocales               = Locales de rapport
 form.control.spel-editor.item.reqCtrlList                 = Constraint list
 form.control.spel-editor.item.requirementChecksum         = Requirement checksum
