InProgress #23194 - [Feature] Add score list characts and formula

--- a/becpg-project/becpg-project-share/src/main/resources/alfresco/messages/becpg-project.properties
+++ b/becpg-project/becpg-project-share/src/main/resources/alfresco/messages/becpg-project.properties
@@ -24,6 +24,7 @@ becpg.forms.help.projectPriority                           = Information purpose
 becpg.forms.help.projectSponsor                            = Person who supports the project.
 becpg.forms.help.projectStartDate                          = Project start date, the project will change to in progress on this date.
 becpg.forms.help.projectState                              = Planned : Project hasn't started yet<br/> In progress : Project started<br/> On hold : Project started but paused
+becpg.forms.help.scoreCriterionRange                       = Please enter the score-to-letter mappings using the following format:  \n- Each mapping is separated by a comma `,`.  \n- Associate a letter with a range using the format `Letter: Range`.  \n- Define the range boundaries as follows:  \n  - Use `[` or `]` to include the boundary.  \n  - Use `(` or `)` to exclude the boundary.  \n\nValid example: `A: (10;8], B: (8;6), C: [6;4]`.  \n\nNote:  \n1. The boundaries of the ranges must be specified in descending order.  \n2. Ranges must be contiguous or non-overlapping.  \n3. Ensure that all possible score values are covered by the defined ranges.  \n
 becpg.forms.help.taskLegendSites                           = Coma separated site ids.
 becpg.forms.help.tlBudgetRef                               = Select a budget item to which the expense is linked.
 becpg.forms.help.tlDuration                                = Task duration.
@@ -49,8 +50,8 @@ becpg.forms.set.delegation.label                           = Delegation
 becpg.forms.set.notification-email.label                   = Email
 becpg.forms.set.notification-filter.label                  = Filters
 becpg.forms.set.notification-recurring.label               = Recurring
+becpg.forms.set.notification-report.label                  = Report
 becpg.forms.set.notification-rule.label                    = Notification
-becpg.forms.set.notification-report.label				   = Report
 becpg.forms.set.planning.label                             = Planning
 becpg.forms.set.project.label                              = Project
 becpg.forms.set.reasign.label                              = Reassign to
