--- a/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/messages/paths.properties
+++ b/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/messages/paths.properties
@@ -1,15 +1,16 @@
 
-path.logoimage.project = Project
-path.project           = Project
-path.project_hierarchy = Hierarchy of projects
-path.projectlists      = Project Lists
-path.projects          = Projects
-path.projecttemplates  = Project templates
-path.requestorigins    = Request origins
-path.requeststates     = Request states
-path.resourcecosts     = Resource costs
-path.scorecriteria     = Score criteria
-path.sponsors          = Sponsors
-path.tasklegends       = Task legends
-path.tasks             = Tasks
-path.timetypes         = Time types
+path.logoimage.project   = Project
+path.project             = Project
+path.project_hierarchy   = Hierarchy of projects
+path.projectlists        = Project Lists
+path.projects            = Projects
+path.projecttemplates    = Project templates
+path.requestorigins      = Request origins
+path.requeststates       = Request states
+path.resourcecosts       = Resource costs
+path.scorecriteria       = Score criteria
+path.scorecriteriontypes = Score criterion types
+path.sponsors            = Sponsors
+path.tasklegends         = Task legends
+path.tasks               = Tasks
+path.timetypes           = Time types
