Fix #17973 - [Feature] Add 'beCPG.eco.max.wused.size' property, exclude Stopped, Refused and Archived from where used in change orders

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/becpg-config-plm.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/becpg-config-plm.properties
@@ -88,6 +88,8 @@ beCPG.eco.automatic.deleteOnApply=false
 #Reformulate mode will not create OM, but reformulate all product that has changed
 beCPG.eco.automatic.withoutRecord=true
 
+beCPG.eco.max.wused.size=500
+
 #Custom pivots for comparison. Each type requires the old default pivot for backwards compatibility, but each type doesn't have to be defined.
 # Example: bcpg:compoList|bcpg:compoListProduct-bcpg:instruction,bcpg:packagingList|bcpg:packagingListProduct
 beCPG.comparison.pivots=qa:controlList|qa:clCharacts-qa:clDayNumber-qa:clUnit
