--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/ecmModel.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/ecmModel.properties
@@ -16,6 +16,7 @@ ecm_ecmmodel.association.ecm_rlTargetItem.title            = Target
 ecm_ecmmodel.association.ecm_wulLink.title                 = Actual value
 ecm_ecmmodel.association.ecm_wulSourceItems.title          = Impacted elements
 ecm_ecmmodel.association.ecm_wulTargetItem.title           = Target element
+ecm_ecmmodel.property.ecm_applyToAll.title                 = Apply to all
 ecm_ecmmodel.property.ecm_cclSourceValue.title             = Source value
 ecm_ecmmodel.property.ecm_cclTargetValue.title             = Target value
 ecm_ecmmodel.property.ecm_culReqDetails.title              = Details of requirements
