Fix #26206 - [Bug] Fix pack_packmodel.property.pack_pmAdditionnalMaterial.title EN

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/packModel.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/packModel.properties
@@ -32,7 +32,7 @@ pack_packmodel.property.pack_palletLayers.title                = Number of layer
 pack_packmodel.property.pack_palletNumberOnGround.title        = Number of pallets on ground (stacking)
 pack_packmodel.property.pack_palletProductsPerBox.title        = Number of products / case
 pack_packmodel.property.pack_palletStackingMaxWeight.title     = Stacking maximun weight (kg)
-pack_packmodel.property.pack_pmAdditionnalMaterial.title       = Additionnal material
+pack_packmodel.property.pack_pmAdditionnalMaterial.title       = Additional material
 pack_packmodel.property.pack_pmCoilDiameter.title              = Coil diameter (mm)
 pack_packmodel.property.pack_pmCoreDiameter.title              = Core diameter (mm)
 pack_packmodel.property.pack_pmEcoScore.title                  = Eco score
