InProgress #23194 - [Feature] Add score list characts and formula

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths.properties
@@ -194,6 +194,7 @@ path.supplier_hierarchy                  = Hierarchy of suppliers
 path.supplierdocuments                   = Supplier documents
 path.supplierentities                    = Supplier entities
 path.suppliers                           = Suppliers
+path.surveyquestions                     = Questionnaires
 path.svhcreasonsforinclusions            = Svhc reasons for inclusions
 path.targetmarkets                       = Target Markets
 path.toxicities                          = Toxicities
