Fix #25196 - [Bug] Fixed origins and sponsors for projects

--- a/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/model/projectModel.properties
+++ b/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/model/projectModel.properties
@@ -20,6 +20,23 @@ listconstraint.pjt_observersEventTypes.TaskRefused     = When a task is refused 
 listconstraint.pjt_observersEventTypes.TaskStart       = When a task starts (Observers)
 listconstraint.pjt_planningModes.Planning              = Planning
 listconstraint.pjt_planningModes.RetroPlanning         = Retroplanning
+listconstraint.pjt_projectOrigins.Sales_Department	   			= Sales Department
+listconstraint.pjt_projectOrigins.Administration_des_ventes	   	= Administration des ventes
+listconstraint.pjt_projectOrigins.Service_Qualite	   			= Service Qualit\u00e9
+listconstraint.pjt_projectOrigins.Direction	   					= Direction
+listconstraint.pjt_projectOrigins.Service_Production	   		= Service Production
+listconstraint.pjt_projectOrigins.Marketing	   					= Marketing
+listconstraint.pjt_projectOrigins.Commerciaux	   				= Commerciaux
+listconstraint.pjt_projectOrigins.Clients	   					= Clients
+listconstraint.pjt_projectOrigins.Production	   				= Production
+listconstraint.pjt_projectSponsors.Client			   = Client
+listconstraint.pjt_projectSponsors.Suppliers		   = Suppliers
+listconstraint.pjt_projectSponsors.Internal			   = Internal
+listconstraint.pjt_projectSponsors.Direction		   = Direction
+listconstraint.pjt_projectSponsors.Marketing		   = Marketing
+listconstraint.pjt_projectSponsors.Quality			   = Quality
+listconstraint.pjt_projectSponsors.Purchase			   = Purchase
+listconstraint.pjt_projectSponsors.Supply			   = Supply
 listconstraint.pjt_projectStates.Cancelled             = Cancelled
 listconstraint.pjt_projectStates.Completed             = Completed
 listconstraint.pjt_projectStates.InProgress            = In progress
