--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration.properties
@@ -9,7 +9,7 @@ beCPG.comparison.name.format.description                       = Allows you to d
 beCPG.connector.channel.register.activity.description          = Register channel activities from connector
 beCPG.copyOrBranch.propertiesToReset.description               = Allows you to define properties and associations that will not be preserved during a copy or merge, separated by commas
 beCPG.currency.supported.description                           = Allows you to define the currencies supported by the system, separated by commas
-beCPG.datalist.effectiveFilterEnabled.description              = Allows you to filter non-effective datalists
+beCPG.datalist.effectiveFilterEnabled.description              = If "true", the system does not display non-effective lines in the composition, packaging and process lists
 beCPG.datalist.effectiveFilterEnabled.readonly                 = true
 beCPG.datalist.effectiveFilterEnabled.type                     = string
 beCPG.defaultSearchTemplate.description                        = Allows you to set the default search template used by Alfresco
