InProgress #23194 - [Feature] Add score list characts and formula

--- a/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/model/projectModel.properties
+++ b/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/model/projectModel.properties
@@ -1,55 +1,55 @@
 
-listconstraint.pjt_allowedPriority.1                   = High
-listconstraint.pjt_allowedPriority.2                   = Medium
-listconstraint.pjt_allowedPriority.3                   = Low
-listconstraint.pjt_deliverableStates.Closed            = Closed
-listconstraint.pjt_deliverableStates.Completed         = Completed
-listconstraint.pjt_deliverableStates.InProgress        = In progress
-listconstraint.pjt_deliverableStates.Planned           = Planned
-listconstraint.pjt_dlScriptExecOrders.None             = None
-listconstraint.pjt_dlScriptExecOrders.Post             = Post
-listconstraint.pjt_dlScriptExecOrders.Pre              = Pre
-listconstraint.pjt_manualDate.End                      = End
-listconstraint.pjt_manualDate.Start                    = Start
-listconstraint.pjt_observersEventTypes.Comment         = Comment (Observers)
-listconstraint.pjt_observersEventTypes.NotifyDisabled  = None (Resources)
-listconstraint.pjt_observersEventTypes.NotifyOnRefused = When a task is refused (Resources)
-listconstraint.pjt_observersEventTypes.Properties      = On properties update (Observers)
-listconstraint.pjt_observersEventTypes.TaskEnd         = When a task is ended (Observers)
-listconstraint.pjt_observersEventTypes.TaskRefused     = When a task is refused (Observers)
-listconstraint.pjt_observersEventTypes.TaskStart       = When a task starts (Observers)
-listconstraint.pjt_planningModes.Planning              = Planning
-listconstraint.pjt_planningModes.RetroPlanning         = Retroplanning
-listconstraint.pjt_projectOrigins.Sales_Department	   			= Sales Department
-listconstraint.pjt_projectOrigins.Administration_des_ventes	   	= Administration des ventes
-listconstraint.pjt_projectOrigins.Service_Qualite	   			= Service Qualit\u00e9
-listconstraint.pjt_projectOrigins.Direction	   					= Direction
-listconstraint.pjt_projectOrigins.Service_Production	   		= Service Production
-listconstraint.pjt_projectOrigins.Marketing	   					= Marketing
-listconstraint.pjt_projectOrigins.Commerciaux	   				= Commerciaux
-listconstraint.pjt_projectOrigins.Clients	   					= Clients
-listconstraint.pjt_projectOrigins.Production	   				= Production
-listconstraint.pjt_projectSponsors.Client			   = Client
-listconstraint.pjt_projectSponsors.Suppliers		   = Suppliers
-listconstraint.pjt_projectSponsors.Internal			   = Internal
-listconstraint.pjt_projectSponsors.Direction		   = Direction
-listconstraint.pjt_projectSponsors.Marketing		   = Marketing
-listconstraint.pjt_projectSponsors.Quality			   = Quality
-listconstraint.pjt_projectSponsors.Purchase			   = Purchase
-listconstraint.pjt_projectSponsors.Supply			   = Supply
-listconstraint.pjt_projectStates.Cancelled             = Cancelled
-listconstraint.pjt_projectStates.Completed             = Completed
-listconstraint.pjt_projectStates.InProgress            = In progress
-listconstraint.pjt_projectStates.OnHold                = On hold
-listconstraint.pjt_projectStates.Planned               = Planned
-listconstraint.pjt_taskStates.Cancelled                = Cancelled
-listconstraint.pjt_taskStates.Completed                = Completed
-listconstraint.pjt_taskStates.InProgress               = In progress
-listconstraint.pjt_taskStates.OnHold                   = On hold
-listconstraint.pjt_taskStates.Planned                  = Planned
-listconstraint.pjt_taskStates.Refused                  = Refused
-listconstraint.pjt_worflowTransitions.refused          = Reject
-listconstraint.pjt_worflowTransitions.validate         = Task done
+listconstraint.pjt_allowedPriority.1                        = High
+listconstraint.pjt_allowedPriority.2                        = Medium
+listconstraint.pjt_allowedPriority.3                        = Low
+listconstraint.pjt_deliverableStates.Closed                 = Closed
+listconstraint.pjt_deliverableStates.Completed              = Completed
+listconstraint.pjt_deliverableStates.InProgress             = In progress
+listconstraint.pjt_deliverableStates.Planned                = Planned
+listconstraint.pjt_dlScriptExecOrders.None                  = None
+listconstraint.pjt_dlScriptExecOrders.Post                  = Post
+listconstraint.pjt_dlScriptExecOrders.Pre                   = Pre
+listconstraint.pjt_manualDate.End                           = End
+listconstraint.pjt_manualDate.Start                         = Start
+listconstraint.pjt_observersEventTypes.Comment              = Comment (Observers)
+listconstraint.pjt_observersEventTypes.NotifyDisabled       = None (Resources)
+listconstraint.pjt_observersEventTypes.NotifyOnRefused      = When a task is refused (Resources)
+listconstraint.pjt_observersEventTypes.Properties           = On properties update (Observers)
+listconstraint.pjt_observersEventTypes.TaskEnd              = When a task is ended (Observers)
+listconstraint.pjt_observersEventTypes.TaskRefused          = When a task is refused (Observers)
+listconstraint.pjt_observersEventTypes.TaskStart            = When a task starts (Observers)
+listconstraint.pjt_planningModes.Planning                   = Planning
+listconstraint.pjt_planningModes.RetroPlanning              = Retroplanning
+listconstraint.pjt_projectOrigins.Administration_des_ventes = Administration des ventes
+listconstraint.pjt_projectOrigins.Clients                   = Clients
+listconstraint.pjt_projectOrigins.Commerciaux               = Commerciaux
+listconstraint.pjt_projectOrigins.Direction                 = Direction
+listconstraint.pjt_projectOrigins.Marketing                 = Marketing
+listconstraint.pjt_projectOrigins.Production                = Production
+listconstraint.pjt_projectOrigins.Sales_Department          = Sales Department
+listconstraint.pjt_projectOrigins.Service_Production        = Service Production
+listconstraint.pjt_projectOrigins.Service_Qualite           = Service Qualit\u00E9
+listconstraint.pjt_projectSponsors.Client                   = Client
+listconstraint.pjt_projectSponsors.Direction                = Direction
+listconstraint.pjt_projectSponsors.Internal                 = Internal
+listconstraint.pjt_projectSponsors.Marketing                = Marketing
+listconstraint.pjt_projectSponsors.Purchase                 = Purchase
+listconstraint.pjt_projectSponsors.Quality                  = Quality
+listconstraint.pjt_projectSponsors.Suppliers                = Suppliers
+listconstraint.pjt_projectSponsors.Supply                   = Supply
+listconstraint.pjt_projectStates.Cancelled                  = Cancelled
+listconstraint.pjt_projectStates.Completed                  = Completed
+listconstraint.pjt_projectStates.InProgress                 = In progress
+listconstraint.pjt_projectStates.OnHold                     = On hold
+listconstraint.pjt_projectStates.Planned                    = Planned
+listconstraint.pjt_taskStates.Cancelled                     = Cancelled
+listconstraint.pjt_taskStates.Completed                     = Completed
+listconstraint.pjt_taskStates.InProgress                    = In progress
+listconstraint.pjt_taskStates.OnHold                        = On hold
+listconstraint.pjt_taskStates.Planned                       = Planned
+listconstraint.pjt_taskStates.Refused                       = Refused
+listconstraint.pjt_worflowTransitions.refused               = Reject
+listconstraint.pjt_worflowTransitions.validate              = Task done
 
 pjt_pjtmodel.aspect.pjt_budgetAspect.title                  = Budget aspect
 pjt_pjtmodel.aspect.pjt_completionAspect.title              = % Completion
@@ -140,7 +140,7 @@ pjt_pjtmodel.property.pjt_scoreCriterionRange.title         = Range
 pjt_pjtmodel.property.pjt_scoreCriterionRangeFormula.title  = Range formula
 pjt_pjtmodel.property.pjt_scoreCriterionType.title          = Criterion type
 pjt_pjtmodel.property.pjt_scoreCriterionWeight.title        = % Weight
-pjt_pjtmodel.property.pjt_slCriterion.title                 = Criterion type
+pjt_pjtmodel.property.pjt_slCriterion.title                 = Type
 pjt_pjtmodel.property.pjt_slScore.title                     = % Score
 pjt_pjtmodel.property.pjt_slScoreDetail.title               = Detail
 pjt_pjtmodel.property.pjt_slScoreRange.title                = Range
