InProgress #23194 - [Feature] Add score list characts and formula

--- a/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/messages/project-messages.properties
+++ b/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/messages/project-messages.properties
@@ -11,6 +11,8 @@ fr.becpg.project.deliverable-state = {1} changed state of deliverable {0} from  
 fr.becpg.project.project-state     = {1} changed state of project {0} from  {2} to {3}
 fr.becpg.project.task-state        = {1} changed state of task {0} from  {2} to {3}
 
+message.formulate.scoreList.error = Error formulating score list ''{0}'': - {1}
+
 path.exportprojects = Projects export
 
 project-activity.activityEvent = Activity event type
