--- a/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/model/projectModel.properties
+++ b/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/model/projectModel.properties
@@ -136,12 +136,13 @@ pjt_pjtmodel.property.pjt_rlPriority.title                  = Priority
 pjt_pjtmodel.property.pjt_rlState.title                     = State of request
 pjt_pjtmodel.property.pjt_scoreCriterionDetailFormula.title = Detail formula
 pjt_pjtmodel.property.pjt_scoreCriterionFormula.title       = Formula
+pjt_pjtmodel.property.pjt_scoreCriterionFormulated.title    = Is formulated?
 pjt_pjtmodel.property.pjt_scoreCriterionRange.title         = Range
 pjt_pjtmodel.property.pjt_scoreCriterionRangeFormula.title  = Range formula
 pjt_pjtmodel.property.pjt_scoreCriterionType.title          = Criterion type
 pjt_pjtmodel.property.pjt_scoreCriterionWeight.title        = % Weight
 pjt_pjtmodel.property.pjt_slCriterion.title                 = Type
-pjt_pjtmodel.property.pjt_slScore.title                     = % Score
+pjt_pjtmodel.property.pjt_slScore.title                     = Score/100
 pjt_pjtmodel.property.pjt_slScoreDetail.title               = Detail
 pjt_pjtmodel.property.pjt_slScoreRange.title                = Range
 pjt_pjtmodel.property.pjt_slScreening.title                 = Screening
