--- a/becpg-core/pom.xml
+++ b/becpg-core/pom.xml
@@ -6,7 +6,7 @@
 		<version>23.4.0</version>
 		<relativePath>../</relativePath>
 	</parent>
-    <version>23.4.0.6-SNAPSHOT</version>
+    <version>23.4.0.6</version>
     <modelVersion>4.0.0</modelVersion>    
 	<artifactId>becpg-core</artifactId>
 	<packaging>jar</packaging>
@@ -114,4 +114,8 @@
 			</plugin>
 		</plugins>
 	</build>
+
+  <scm>
+    <tag>23.4.0.6</tag>
+  </scm>
 </project>
