--- a/becpg-project/becpg-project-core/pom.xml
+++ b/becpg-project/becpg-project-core/pom.xml
@@ -6,7 +6,7 @@
 		<version>23.4.0</version>
 		<relativePath>../../</relativePath>
 	</parent>
- <version>23.4.0.6</version>
+ <version>23.4.0.7-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>    
 	<artifactId>becpg-project-core</artifactId>
 	<packaging>jar</packaging>
