--- a/becpg-designer/becpg-designer-core/pom.xml
+++ b/becpg-designer/becpg-designer-core/pom.xml
@@ -6,7 +6,7 @@
 		<version>23.4.0</version>
 		<relativePath>../../</relativePath>
 	</parent>
-	<version>23.4.0.12-SNAPSHOT</version>
+	<version>23.4.0.12</version>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>becpg-designer-core</artifactId>
 	<packaging>jar</packaging>
@@ -66,6 +66,6 @@
 	</build>
 
   <scm>
-    <tag>23.4.0.6</tag>
+    <tag>23.4.0.12</tag>
   </scm>
 </project>
