--- a/becpg-plm/becpg-plm-share/pom.xml
+++ b/becpg-plm/becpg-plm-share/pom.xml
@@ -6,7 +6,7 @@
 		<version>23.4.0</version>
 		<relativePath>../../</relativePath>
 	</parent>
- <version>23.4.0.13</version>
+ <version>23.4.0.14-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>    
 	<artifactId>becpg-plm-share</artifactId>
 	<packaging>jar</packaging>
@@ -40,6 +40,6 @@
 	</build>
 
   <scm>
-    <tag>23.4.0.13</tag>
+    <tag>23.4.0.6</tag>
   </scm>
 </project>
