Fix #23952 - [Feature] Add qtyPerc 5

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
@@ -295,6 +295,7 @@ bcpg_bcpgmodel.property.bcpg_ingListQtyPerc1.title                              
 bcpg_bcpgmodel.property.bcpg_ingListQtyPerc2.title                              = Quantity 2 (%)
 bcpg_bcpgmodel.property.bcpg_ingListQtyPerc3.title                              = Synthetic (%)
 bcpg_bcpgmodel.property.bcpg_ingListQtyPerc4.title                              = Natural (%)
+bcpg_bcpgmodel.property.bcpg_ingListQtyPerc5.title                              = Quantity 5 (%)
 bcpg_bcpgmodel.property.bcpg_ingListQtyPercWithSecondaryYield.title             = Qty as prepared (%)
 bcpg_bcpgmodel.property.bcpg_ingListQtyPercWithYield.title                      = Qty with yield (%)
 bcpg_bcpgmodel.property.bcpg_ingListVolumeQtyPerc.description                   = Volume (%)
