--- a/becpg-share/pom.xml
+++ b/becpg-share/pom.xml
@@ -6,7 +6,7 @@
 		<version>23.4.0</version>
 		<relativePath>../</relativePath>
 	</parent>
- <version>23.4.0.16-SNAPSHOT</version>
+ <version>23.4.0.16</version>
     <modelVersion>4.0.0</modelVersion>
 	<artifactId>becpg-share</artifactId>
 	<packaging>jar</packaging>
@@ -96,6 +96,6 @@
 	</reporting>
 
   <scm>
-    <tag>23.4.0.6</tag>
+    <tag>23.4.0.16</tag>
   </scm>
 </project>
