Fix #26209 - [Feature] Change version graph and activity view

--- a/becpg-share/src/main/resources/alfresco/messages/becpg-share.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-share.properties
@@ -55,6 +55,8 @@ button.wused                    = Where used
 dashlet.my-olapchart.description = BI Component
 dashlet.my-olapchart.shortName   = BI Chart
 
+datetime.format = dd/mm/yyyy hh:MM tt
+
 details.effectivity.from   = Valid from {0}
 details.effectivity.fromto = Valid from {0} to {1}
 details.effectivity.none   = No effectivity
