--- a/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get.properties
+++ b/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get.properties
@@ -259,7 +259,7 @@ data.state.valid                              = Valid
 
 date.format     = dd/mm/yyyy
 
-datetime.format = dd/mm/yyyy hh:MM
+datetime.format = dd/mm/yyyy hh:MM tt
 
 entity.activity.after                  = After
 entity.activity.before                 = Before
