Fix #26399 - [Bug] Added locales in supportedLocales

--- a/becpg-integration-runner/src/main/docker/becpg-test-core/alfresco/beCPG.properties
+++ b/becpg-integration-runner/src/main/docker/becpg-test-core/alfresco/beCPG.properties
@@ -19,4 +19,4 @@ beCPG.report.name.format={entity_cm:name} - {report_cm:name}
 beCPG.product.name.format={cm:name}
 beCPG.quality.sampleId.format={qa:batchId}/{qa:qcSamplesCounter}
 
-beCPG.multilinguale.supportedLocales=en,en_US,en_CA,en_AU,de,es,fr,fr_CA,it,ja_JP,nl,ru,zh_CN,pt,no,sv_SE,el,pl,es_MX,in_ID
+beCPG.multilinguale.supportedLocales=en,en_US,en_CA,en_AU,de,es,fr,fr_CA,it,ja_JP,nl,ru,zh_CN,pt,no,sv_SE,el,pl,es_MX,in_ID,fi,us,jp,bg,cs,da,et,hr,lv,lt,hu,ro,sk,sl
