Fix #26039 - [I18N] Move i18n key in core

--- a/becpg-share/src/main/resources/alfresco/messages/becpg-share.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-share.properties
@@ -110,13 +110,15 @@ linkshare.action.google-plus.label = Share using Google+
 linkshare.action.twitter.label     = Share using Twitter
 linkshare.action.twitter.message   = File {1} shared from beCPG
 
-menu.basket.empty                = Empty basket
-menu.basket.show                 = Show basket
-menu.create-content.entity       = Entity...
-menu.create-content.externalLink = External link...
-menu.selected-items.lock         = Lock item(s)
-menu.selected-items.quick-share  = Share documents
-menu.selected-items.unlock       = Unlock item(s)
+menu.basket.empty                  = Empty basket
+menu.basket.show                   = Show basket
+menu.create-content.entity         = Entity...
+menu.create-content.externalLink   = External link...
+menu.selected-items.assign-process = Start process...
+menu.selected-items.basket         = Add to basket
+menu.selected-items.lock           = Lock item(s)
+menu.selected-items.quick-share    = Share documents
+menu.selected-items.unlock         = Unlock item(s)
 
 message.annotation-cancel.failure             = Could not cancel annotations
 message.annotation-cancel.inprogress          = Cancelling annotations
