--- a/becpg-plm/becpg-plm-share/pom.xml
+++ b/becpg-plm/becpg-plm-share/pom.xml
@@ -6,7 +6,7 @@
 		<version>23.4.1</version>
 		<relativePath>../../</relativePath>
 	</parent>
- <version>23.4.1.1-SNAPSHOT</version>
+ <version>23.4.1.1</version>
     <modelVersion>4.0.0</modelVersion>    
 	<artifactId>becpg-plm-share</artifactId>
 	<packaging>jar</packaging>
@@ -40,6 +40,6 @@
 	</build>
 
   <scm>
-    <tag>23.4.1.6</tag>
+    <tag>23.4.1.1</tag>
   </scm>
 </project>
