Fix #25709 - [Feature] Changed some english translations

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt.properties
@@ -226,7 +226,7 @@ bcpg_bcpgmodel.property.bcpg_costType.title                                     
 bcpg_bcpgmodel.property.bcpg_cstsCode.title                                     = Code
 bcpg_bcpgmodel.property.bcpg_cstsCodeType.title                                 = Type
 bcpg_bcpgmodel.property.bcpg_drainedWeight.title                                = Drained weight (kg)
-bcpg_bcpgmodel.property.bcpg_dropPackagingOfComponents.title                    = Drop packaging of components
+bcpg_bcpgmodel.property.bcpg_dropPackagingOfComponents.title                    = Discard packaging of components
 bcpg_bcpgmodel.property.bcpg_dynamicCharactColumn.title                         = Column
 bcpg_bcpgmodel.property.bcpg_dynamicCharactColumn1.title                        = Column 1
 bcpg_bcpgmodel.property.bcpg_dynamicCharactColumn10.title                       = Column 10
