--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model.properties
@@ -203,7 +203,7 @@ gs1_gs1Model.property.gs1_packagingShapeCode.title                              
 gs1_gs1Model.property.gs1_packagingTermsAndConditionsCode.title                           = Indication of reusable packaging
 gs1_gs1Model.property.gs1_packagingTypeCode.title                                         = Type of packaging
 gs1_gs1Model.property.gs1_packagingTypeDescription.title                                  = Packaging Type description
-gs1_gs1Model.property.gs1_palletTypeCode.title                                            = Pallet type backing
+gs1_gs1Model.property.gs1_palletTypeCode.title                                            = Pallet type support
 gs1_gs1Model.property.gs1_pegHoleNumber.title                                             = Peg hole number
 gs1_gs1Model.property.gs1_pegHoleTypeCode.title                                           = Peg hole type
 gs1_gs1Model.property.gs1_pegHorizontal.title                                             = Peg hole horizontal distance (mm)
