--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms.properties
@@ -333,7 +333,7 @@ form.control.spel-editor.item.defaultVariantData          = Default variant data
 form.control.spel-editor.item.defaultVariantPackagingData = Default variant packaging data
 form.control.spel-editor.item.density                     = Density
 form.control.spel-editor.item.depthLevel                  = Depth level
-form.control.spel-editor.item.dropPackagingOfComponents   = Drop packaging of components
+form.control.spel-editor.item.dropPackagingOfComponents   = Discard packaging of components
 form.control.spel-editor.item.dynamicCharactList          = Characteristic formulated list
 form.control.spel-editor.item.ecoScore                    = Eco-Score
 form.control.spel-editor.item.ecoScoreCategory            = Eco-Score category
