--- a/becpg-share/src/main/resources/alfresco/messages/becpg-share.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-share.properties
@@ -114,13 +114,14 @@ linkshare.action.google-plus.label = Share using Google+
 linkshare.action.twitter.label     = Share using Twitter
 linkshare.action.twitter.message   = File {1} shared from beCPG
 
-menu.basket.empty                = Empty basket
-menu.basket.show                 = Show basket
-menu.create-content.entity       = Entity...
-menu.create-content.externalLink = External link...
-menu.selected-items.lock         = Lock item(s)
-menu.selected-items.quick-share  = Share documents
-menu.selected-items.unlock       = Unlock item(s)
+menu.basket.empty                           = Empty basket
+menu.basket.show                            = Show basket
+menu.create-content.entity                  = Entity...
+menu.create-content.externalLink            = External link...
+menu.selected-items.lock                    = Lock item(s)
+menu.selected-items.quick-share             = Share documents
+menu.selected-items.unlock                  = Unlock item(s)
+menu.selected-items.update-supplier-account = Update supplier account
 
 message.annotation-cancel.failure             = Could not cancel annotations
 message.annotation-cancel.inprogress          = Cancelling annotations
@@ -179,6 +180,10 @@ message.unlock.title                          = Unlock item(s)
 message.update-permissions.failure            = Could not update permissions
 message.update-permissions.please-wait        = Please wait. Permissions being updated...
 message.update-permissions.success            = Permissions successfully updated
+message.update-supplier-account.description   = Are you sure you want to update the supplier account ?
+message.update-supplier-account.failure       = Supplier account update failure
+message.update-supplier-account.success       = Supplier account update successfull
+message.update-supplier-account.title         = Supplier account update
 
 page.becpg.admin.description                      = beCPG Administration page
 page.becpg.admin.title                            = beCPG Administration
