--- a/becpg-share/src/main/resources/alfresco/messages/becpg-share.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-share.properties
@@ -91,11 +91,12 @@ label.assignedUsers          = Assigned users
 label.compare                = Compare
 label.entity                 = Entity
 label.export-search          = Export the result
+label.generatepassword       = Generate password
 label.notify-supplier        = Send notification to supplier
 label.revert                 = Revert
 label.saml                   = Connect with SSO
 label.select-columns.title   = Check Columns to show
-label.ssouser                = SSO user
+label.ssouser                = Synchronize with IDS
 label.supplier-account.title = Supplier email address
 label.usercontentlocale      = Content language
 label.userlocale             = UI language
@@ -113,7 +114,6 @@ linkshare.action.facebook.message  = File {1} shared from beCPG
 linkshare.action.google-plus.label = Share using Google+
 linkshare.action.twitter.label     = Share using Twitter
 linkshare.action.twitter.message   = File {1} shared from beCPG
-
 
 menu.basket.empty                           = Empty basket
 menu.basket.show                            = Show basket
