Fix #27038 - [Feature] Improve user import and SSO management

--- a/becpg-share/src/main/resources/alfresco/messages/becpg-share.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-share.properties
@@ -89,11 +89,12 @@ label.assignedUsers          = Assigned users
 label.compare                = Compare
 label.entity                 = Entity
 label.export-search          = Export the result
+label.generatepassword       = Generate password
 label.notify-supplier        = Send notification to supplier
 label.revert                 = Revert
 label.saml                   = Connect with SSO
 label.select-columns.title   = Check Columns to show
-label.ssouser                = SSO user
+label.ssouser                = Synchronize with IDS
 label.supplier-account.title = Supplier email address
 label.usercontentlocale      = Content language
 label.userlocale             = UI language
@@ -121,7 +122,6 @@ menu.selected-items.basket         = Add to basket
 menu.selected-items.lock           = Lock item(s)
 menu.selected-items.quick-share    = Share documents
 menu.selected-items.unlock         = Unlock item(s)
-
 message.annotation-cancel.failure             = Could not cancel annotations
 message.annotation-cancel.inprogress          = Cancelling annotations
 message.annotation-checkin.failure            = Could not checkin annotations
